page/index.css
.container {
    max-width: 960px;
}
.overflow-hidden {
    overflow: hidden;
}
.background-image {
    background-repeat: no-repeat;
    background-position: center;
    background-size: 90%;
}

.site-header {
    background-color: rgba(0, 0, 0, 0.85);
    -webkit-backdrop-filter: saturate(180%) blur(20px);
    backdrop-filter: saturate(180%) blur(20px);
}
.site-header a {
    color: #999;
    transition: ease-in-out color 0.15s;
}
.site-header a:hover {
    color: #fff;
    text-decoration: none;
}
body > nav img.d-block,
body > footer img.d-block {
    max-width: 1.5rem;
    max-height: 1.5rem;
}
body > footer {
    white-space: nowrap;
}

.product-device {
    position: absolute;
    right: 10%;
    bottom: -30%;
    width: 300px;
    height: 540px;
    background-color: #333;
    border-radius: 21px;
    -webkit-transform: rotate(30deg);
    transform: rotate(30deg);
}
.product-device::before {
    position: absolute;
    top: 10%;
    right: 10px;
    bottom: 10%;
    left: 10px;
    content: "";
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 5px;
}
.product-device-2 {
    top: -25%;
    right: auto;
    bottom: 0;
    left: 5%;
    background-color: #e5e5e5;
}

.marketing .col-lg-4 {
    margin-bottom: 1.5rem;
    text-align: center;
}
.marketing .fas {
    padding: 1rem;
}
.marketing h2 {
    font-weight: 400;
}
.marketing .col-lg-4 p {
    margin-right: 0.75rem;
    margin-left: 0.75rem;
    text-align: left;
}

.featurette-divider {
    margin: 5rem 0;
}
.featurette-heading {
    font-weight: 300;
    letter-spacing: -0.05rem;
}
.featurette .lead {
    word-break: keep-all;
    white-space: nowrap;
}
@media (min-width: 40em) {
    .featurette-heading {
        font-size: 50px;
    }
}
@media (min-width: 62em) {
    .featurette-heading {
        margin-top: 5.5rem;
    }
}

